--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <header>
                     <div class="flex">
                    <div>
-                        <img class="img" src="/images/image-kira.jpg" alt="">
+                        <img class="img" src="./images/image-kira.jpg" alt="">
                    </div>
                    <div>
                    <h4 class="name">Kira Whittle</h4>
